--- a/udagram_app/error.html
+++ b/udagram_app/error.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wecome</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>it works! Udagram, Udacity</h1>
+    <h1>Page not found 404</h1>
 </body>
 </html>
